--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
   "license": "ISC",
   "devDependencies": {
     "@sapphire/ts-config": "^3.3.4",
-    "@types/node": "^18.8.3",
+    "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@sapphire/framework": "^3.2.0-pr-512.244de39.0",
-    "@sapphire/plugin-subcommands": "^3.2.3",
-    "@sapphire/type": "^2.2.4",
+    "@sapphire/framework": "^4.2.2",
+    "@sapphire/plugin-subcommands": "^3.2.4",
+    "@sapphire/type": "^2.3.0",
     "@sapphire/utilities": "^3.11.0",
-    "discord.js": "^14.5.1-dev.1665317070-5f72d8b.0",
+    "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.25.0"
   }
